--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
   <string name="opengl_rtsp">OpenGl RTSP</string>
   <string name="service_rtp">Service RTP</string>
   <string name="cube_test_rtmp">Cube test RTMP</string>
-
+  <string name="accessibility_service_description">accessibility service description</string>
   <string name="tv_select">Select your streamer</string>
   <string name="hint_rtsp">rtsp://yourendpoint</string>
   <string name="hint_rtmp">rtmp://yourendpoint</string>
